--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/11/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">81.7&#176;F</td>
+        <td class="data">81.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">81.7&#176;F</td>
+        <td class="data">81.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">81.7&#176;F</td>
+        <td class="data">81.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.6&#176;F</td>
+        <td class="data">50.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.948 inHg (-0.060)</td>
+        <td class="data">29.951 inHg (-0.053)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">1 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          154
+          155
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:54:02 PM">
-            74.2</span><br/>
+          <span title="04:06:02 PM">
+            74.3</span><br/>
           <span title="07:27:01 AM">
             70.9</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 1 hour, 17 minutes</td>
+      <td class="data">10 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 1 hour, 17 minutes</td>
+      <td class="data">10 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
