--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 04:44:00 PM</p>
+    <p class="lastupdate">09/11/2020 04:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">81.3&#176;F</td>
+        <td class="data">81.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">81.3&#176;F</td>
+        <td class="data">81.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">81.3&#176;F</td>
+        <td class="data">81.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.4&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.943 inHg (-0.047)</td>
+        <td class="data">29.940 inHg (-0.048)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          151
+          150
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 1 hour, 57 minutes</td>
+      <td class="data">10 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 1 hour, 57 minutes</td>
+      <td class="data">10 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
