--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/11/2020 06:34:00 PM</p>
+    <p class="lastupdate">09/11/2020 06:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">75.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">75.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">76.2&#176;F</td>
+        <td class="data">75.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">49.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">40%</td>
+        <td class="data">39%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.931 inHg (-0.022)</td>
+        <td class="data">29.929 inHg (-0.024)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.9&#176;F</td>
+        <td class="data">73.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -118,7 +118,7 @@
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
-          <td class="data">Last quarter<br/>
+          <td class="data">Waning crescent<br/>
             31%</td>
         </tr>
       </table>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 3 hours, 47 minutes</td>
+      <td class="data">10 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 3 hours, 47 minutes</td>
+      <td class="data">10 days, 3 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
